# mimic_joint_gazebo_tutorial

./: CMakeLists.txt  README.md  package.xml
config/gazebo/: gazebo_controller.yaml
config/ros_control/: joint_trajectory_controller.yaml
launch/: gazebo.launch  show_model_rviz.launch
urdf/: mimic_joint_gazebo_tutorial.urdf.xacro
